[gd_scene load_steps=3 format=2]

[ext_resource path="res://SceneComponent/Display/MakersMonument/MonumentContent.gd" type="Script" id=2]
[ext_resource path="res://Assets/Interface/MonumentTheme.tres" type="Theme" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SequenceArea" type="Control" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 920.0
rect_min_size = Vector2( 1920, 920 )

[node name="AllArea" type="Control" parent="VBoxContainer"]
visible = false
margin_top = 924.0
margin_right = 1920.0
margin_bottom = 1844.0
rect_min_size = Vector2( 1920, 920 )

[node name="BottomArea" type="Control" parent="VBoxContainer"]
margin_top = 924.0
margin_right = 1920.0
margin_bottom = 1084.0
rect_min_size = Vector2( 1920, 160 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/BottomArea"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlButton" type="Button" parent="VBoxContainer/BottomArea/CenterContainer"]
margin_left = 824.0
margin_top = 20.0
margin_right = 1095.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 120 )
custom_colors/font_color_disabled = Color( 0.882353, 0.878431, 0.878431, 1 )
custom_colors/font_color = Color( 0.882353, 0.878431, 0.878431, 1 )
custom_colors/font_color_hover = Color( 0.882353, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.878431, 0.878431, 1 )
text = "Show All"

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="button_up" from="VBoxContainer/BottomArea/CenterContainer/ControlButton" to="." method="_on_control_button_button_up"]
